--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,7 +5,6 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
-allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -14,7 +13,6 @@ allow 103.251.167.20;
 allow 103.253.24.18;
 allow 103.28.52.93;
 allow 104.167.242.116;
-allow 104.167.242.117;
 allow 104.192.1.138;
 allow 104.192.171.138;
 allow 104.192.3.74;
@@ -111,6 +109,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -176,6 +175,7 @@ allow 171.25.193.77;
 allow 171.25.193.78;
 allow 171.25.193.79;
 allow 171.25.193.80;
+allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.232.161.206;
@@ -239,6 +239,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.113.128.30;
@@ -713,6 +714,7 @@ allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
 allow 2001:4b20:12:f001::105;
+allow 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 allow 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 allow 2001:620:20d0::19;
 allow 2001:620:20d0::20;
@@ -801,6 +803,8 @@ allow 2001:67c:89c:702:1ce:1ce:babe:8;
 allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
+allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -979,7 +983,6 @@ allow 2602:fc24:18:96e5::1;
 allow 2602:fc24:18:cb10::1;
 allow 2602:fc24:18:d21a::1;
 allow 2602:fccf:310:1::a;
-allow 2602:fccf:310:1::b;
 allow 2602:fef9:100:1100::199;
 allow 2603:3:6106:2460::;
 allow 2603:3:6107:47a0::;
@@ -1536,7 +1539,7 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.212.49.134;
+allow 34.195.193.12;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1677,7 +1680,6 @@ allow 5.255.99.124;
 allow 5.255.99.147;
 allow 5.255.99.5;
 allow 5.2.67.226;
-allow 5.2.79.179;
 allow 5.2.79.190;
 allow 5.39.25.229;
 allow 54.224.79.94;
@@ -1808,6 +1810,7 @@ allow 92.205.129.119;
 allow 92.205.163.226;
 allow 92.205.185.52;
 allow 92.205.31.137;
+allow 92.243.24.163;
 allow 92.246.84.133;
 allow 93.123.12.112;
 allow 93.243.56.177;
