--- a/set_real_ip_from-tor_ips_v6.conf
+++ b/set_real_ip_from-tor_ips_v6.conf
@@ -23,6 +23,7 @@ set_real_ip_from 2001:41d0:a:fe22::1;
 set_real_ip_from 2001:41d0:e:70c::1;
 set_real_ip_from 2001:470:1:908::9001;
 set_real_ip_from 2001:4b20:12:f001::105;
+set_real_ip_from 2001:4b98:dc0:43:f816:3eff:fe5f:cf14;
 set_real_ip_from 2001:4b98:dc0:47:216:3eff:fe3d:888c;
 set_real_ip_from 2001:620:20d0::19;
 set_real_ip_from 2001:620:20d0::20;
@@ -111,6 +112,8 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:8;
 set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
+set_real_ip_from 2001:9b1:c300:3044::610;
+set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -144,7 +147,6 @@ set_real_ip_from 2602:fc24:18:96e5::1;
 set_real_ip_from 2602:fc24:18:cb10::1;
 set_real_ip_from 2602:fc24:18:d21a::1;
 set_real_ip_from 2602:fccf:310:1::a;
-set_real_ip_from 2602:fccf:310:1::b;
 set_real_ip_from 2602:fef9:100:1100::199;
 set_real_ip_from 2603:3:6106:2460::;
 set_real_ip_from 2603:3:6107:47a0::;
