--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,7 +5,6 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
-set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -89,6 +88,7 @@ set_real_ip_from 107.189.8.181;
 set_real_ip_from 107.189.8.226;
 set_real_ip_from 107.189.8.238;
 set_real_ip_from 107.189.8.56;
+set_real_ip_from 107.22.173.22;
 set_real_ip_from 108.181.27.205;
 set_real_ip_from 108.181.69.243;
 set_real_ip_from 108.61.189.136;
@@ -110,7 +110,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -210,10 +209,11 @@ set_real_ip_from 178.218.144.64;
 set_real_ip_from 178.218.144.96;
 set_real_ip_from 178.218.144.99;
 set_real_ip_from 178.236.247.122;
-set_real_ip_from 178.31.69.82;
+set_real_ip_from 178.30.167.76;
 set_real_ip_from 179.43.128.16;
 set_real_ip_from 179.43.159.194;
 set_real_ip_from 179.43.159.195;
+set_real_ip_from 179.43.159.196;
 set_real_ip_from 179.43.159.197;
 set_real_ip_from 179.43.159.198;
 set_real_ip_from 179.43.159.199;
@@ -546,6 +546,7 @@ set_real_ip_from 185.86.148.90;
 set_real_ip_from 188.165.200.97;
 set_real_ip_from 188.166.92.179;
 set_real_ip_from 188.172.229.15;
+set_real_ip_from 188.214.104.21;
 set_real_ip_from 188.68.41.191;
 set_real_ip_from 188.68.49.235;
 set_real_ip_from 188.68.52.231;
@@ -558,6 +559,7 @@ set_real_ip_from 192.210.255.181;
 set_real_ip_from 192.30.89.27;
 set_real_ip_from 192.42.116.13;
 set_real_ip_from 192.42.116.14;
+set_real_ip_from 192.42.116.15;
 set_real_ip_from 192.42.116.17;
 set_real_ip_from 192.42.116.173;
 set_real_ip_from 192.42.116.174;
@@ -638,7 +640,6 @@ set_real_ip_from 193.239.232.102;
 set_real_ip_from 193.239.232.230;
 set_real_ip_from 193.26.115.43;
 set_real_ip_from 193.26.115.61;
-set_real_ip_from 193.35.18.105;
 set_real_ip_from 193.35.18.49;
 set_real_ip_from 193.35.18.77;
 set_real_ip_from 194.15.112.133;
@@ -778,6 +779,7 @@ set_real_ip_from 2001:67c:6ec:203:192:42:116:220;
 set_real_ip_from 2001:67c:6ec:203:192:42:116:221;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5513;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5514;
+set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5515;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5517;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5518;
 set_real_ip_from 2001:67c:6ec:203:218:33ff:fe44:5520;
@@ -800,7 +802,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -1124,8 +1125,6 @@ set_real_ip_from 2620:7:6001::120;
 set_real_ip_from 2620:95:4007::111;
 set_real_ip_from 27.255.75.198;
 set_real_ip_from 2800:ba0:6:c1::4858;
-set_real_ip_from 2a00:1169:110:2990::;
-set_real_ip_from 2a00:1169:112:de0::;
 set_real_ip_from 2a00:1169:119:b120::;
 set_real_ip_from 2a00:1169:11f:5200::;
 set_real_ip_from 2a00:1169:11f:d680::;
@@ -1535,7 +1534,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 34.192.146.72;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1808,8 +1806,6 @@ set_real_ip_from 91.219.239.166;
 set_real_ip_from 91.92.109.126;
 set_real_ip_from 91.92.109.43;
 set_real_ip_from 92.205.129.119;
-set_real_ip_from 92.205.163.226;
-set_real_ip_from 92.205.185.52;
 set_real_ip_from 92.205.31.137;
 set_real_ip_from 92.243.24.163;
 set_real_ip_from 92.246.84.133;
@@ -1857,6 +1853,7 @@ set_real_ip_from 94.228.163.25;
 set_real_ip_from 94.228.169.70;
 set_real_ip_from 94.230.208.147;
 set_real_ip_from 94.230.208.148;
+set_real_ip_from 94.32.66.15;
 set_real_ip_from 94.75.225.81;
 set_real_ip_from 95.128.43.164;
 set_real_ip_from 95.142.161.63;
