--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -58,7 +58,6 @@ allow 107.189.13.254;
 allow 107.189.13.91;
 allow 107.189.14.106;
 allow 107.189.14.4;
-allow 107.189.14.43;
 allow 107.189.1.9;
 allow 107.189.1.96;
 allow 107.189.2.108;
@@ -88,7 +87,6 @@ allow 107.189.8.181;
 allow 107.189.8.226;
 allow 107.189.8.238;
 allow 107.189.8.56;
-allow 107.22.173.22;
 allow 108.181.27.205;
 allow 108.181.69.243;
 allow 108.61.189.136;
@@ -110,6 +108,7 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
+allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -224,6 +223,7 @@ allow 179.43.167.205;
 allow 179.43.182.232;
 allow 179.43.182.58;
 allow 180.150.226.99;
+allow 18.233.27.19;
 allow 184.105.48.40;
 allow 185.100.85.132;
 allow 185.100.85.22;
@@ -531,6 +531,7 @@ allow 185.247.184.33;
 allow 185.252.232.218;
 allow 185.254.196.141;
 allow 185.34.33.2;
+allow 185.35.202.222;
 allow 185.38.175.133;
 allow 185.39.207.83;
 allow 185.42.170.203;
@@ -633,6 +634,7 @@ allow 193.189.100.204;
 allow 193.189.100.205;
 allow 193.189.100.206;
 allow 193.218.118.133;
+allow 193.218.118.181;
 allow 193.218.118.182;
 allow 193.218.118.91;
 allow 193.233.133.109;
@@ -802,6 +804,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -1065,7 +1068,6 @@ allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
-allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
@@ -1162,6 +1164,7 @@ allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
+allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -1509,6 +1512,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a10:1fc0:1::1078:9b3b;
 allow 2a10:1fc0:1::9a01:890f;
 allow 2a10:1fc0:1::ac76:4d41;
@@ -1546,6 +1550,7 @@ allow 37.252.255.135;
 allow 37.27.20.230;
 allow 37.48.120.196;
 allow 37.48.70.156;
+allow 38.242.254.131;
 allow 38.97.116.244;
 allow 45.12.3.80;
 allow 45.128.232.151;
@@ -1649,6 +1654,7 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.151;
 allow 5.255.100.219;
+allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.101.79;
