--- a/allow-tor_ips_v6.conf
+++ b/allow-tor_ips_v6.conf
@@ -113,6 +113,7 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
+allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -231,7 +232,6 @@ allow 2605:6400:30:f82f:7de1:3de3:8947:bc6a;
 allow 2605:6400:30:f858:2704:73e1:7085:12ef;
 allow 2605:6400:30:f8b5:620c:dc25:c624:aafd;
 allow 2605:6400:30:f8d5::1;
-allow 2605:6400:30:f8da:2b2:a293:30ad:506d;
 allow 2605:6400:30:f8e6:9fae:c86f:2d71:6c28;
 allow 2605:6400:30:f920:f523:28ef:3617:8b86;
 allow 2605:6400:30:fa92:5f11:1ed9:9615:fcc6;
@@ -327,6 +327,7 @@ allow 2a02:898:218::2;
 allow 2a02:c207:3002:8283::1;
 allow 2a02:c207:3006:6498::1;
 allow 2a02:ec0:209:10::4;
+allow 2a02:ed06::222;
 allow 2a03:4000:15:928:dead:beef:ca1f:1337;
 allow 2a03:4000:17:a15:d4db:fbff:fef4:8b7b;
 allow 2a03:4000:19:40:4804:2fff:fe4c:9cc1;
@@ -674,6 +675,7 @@ allow 2a0f:df00:0:255::205;
 allow 2a0f:df00:0:255::206;
 allow 2a0f:e586:f:f::133;
 allow 2a0f:e586:f:f::182;
+allow 2a0f:e586:f:f:9491:941d:caf5:50e7;
 allow 2a10:1fc0:1::1078:9b3b;
 allow 2a10:1fc0:1::9a01:890f;
 allow 2a10:1fc0:1::ac76:4d41;
