--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -5,6 +5,7 @@ allow 103.109.101.105;
 allow 103.126.161.54;
 allow 103.129.222.46;
 allow 103.163.218.11;
+allow 103.174.253.222;
 allow 103.193.179.233;
 allow 103.196.37.111;
 allow 103.208.86.5;
@@ -31,7 +32,6 @@ allow 104.244.74.97;
 allow 104.244.75.74;
 allow 104.244.77.192;
 allow 104.244.77.208;
-allow 104.244.77.79;
 allow 104.244.77.80;
 allow 104.244.78.162;
 allow 104.244.78.233;
@@ -109,7 +109,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -236,6 +235,7 @@ allow 185.100.87.192;
 allow 185.100.87.250;
 allow 185.100.87.253;
 allow 185.100.87.41;
+allow 185.10.16.41;
 allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
@@ -803,7 +803,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -880,6 +879,7 @@ allow 23.129.64.147;
 allow 23.129.64.148;
 allow 23.129.64.149;
 allow 23.129.64.210;
+allow 23.129.64.211;
 allow 23.129.64.212;
 allow 23.129.64.213;
 allow 23.129.64.214;
@@ -921,6 +921,7 @@ allow 23.154.177.19;
 allow 23.154.177.2;
 allow 23.154.177.20;
 allow 23.154.177.21;
+allow 23.154.177.22;
 allow 23.154.177.23;
 allow 23.154.177.24;
 allow 23.154.177.25;
@@ -932,6 +933,7 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
+allow 23.155.8.104;
 allow 23.184.48.101;
 allow 23.184.48.127;
 allow 23.184.48.128;
@@ -958,6 +960,7 @@ allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::3;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2600:3c07::f03c:94ff:fe12:513e;
+allow 2602:2e5::104;
 allow 2602:2e6:0:6::;
 allow 2602:fbf6:11:27::3;
 allow 2602:fc24:11:26c3::1;
@@ -1097,6 +1100,7 @@ allow 2620:18c:0:192::147;
 allow 2620:18c:0:192::148;
 allow 2620:18c:0:192::149;
 allow 2620:18c:0:192::210;
+allow 2620:18c:0:192::211;
 allow 2620:18c:0:192::212;
 allow 2620:18c:0:192::213;
 allow 2620:18c:0:192::214;
@@ -1531,7 +1535,6 @@ allow 2a12:a800:2:1:45:138:16:203;
 allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
-allow 3.212.50.218;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
@@ -1546,6 +1549,7 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
+allow 44.212.207.100;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.129.199.163;
@@ -1643,6 +1647,7 @@ allow 51.81.254.15;
 allow 5.181.80.107;
 allow 5.182.86.212;
 allow 51.89.153.112;
+allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
@@ -1730,6 +1735,7 @@ allow 80.78.27.108;
 allow 80.82.78.14;
 allow 81.16.33.42;
 allow 81.17.28.95;
+allow 81.64.1.143;
 allow 82.118.242.158;
 allow 82.153.138.120;
 allow 82.153.138.153;
