--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -113,7 +113,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -127,6 +126,7 @@ deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::3;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2600:3c07::f03c:94ff:fe12:513e;
+deny 2602:2e5::104;
 deny 2602:2e6:0:6::;
 deny 2602:fbf6:11:27::3;
 deny 2602:fc24:11:26c3::1;
@@ -266,6 +266,7 @@ deny 2620:18c:0:192::147;
 deny 2620:18c:0:192::148;
 deny 2620:18c:0:192::149;
 deny 2620:18c:0:192::210;
+deny 2620:18c:0:192::211;
 deny 2620:18c:0:192::212;
 deny 2620:18c:0:192::213;
 deny 2620:18c:0:192::214;
