--- a/set_real_ip_from-tor_ips.conf
+++ b/set_real_ip_from-tor_ips.conf
@@ -5,6 +5,7 @@ set_real_ip_from 103.109.101.105;
 set_real_ip_from 103.126.161.54;
 set_real_ip_from 103.129.222.46;
 set_real_ip_from 103.163.218.11;
+set_real_ip_from 103.174.253.222;
 set_real_ip_from 103.193.179.233;
 set_real_ip_from 103.196.37.111;
 set_real_ip_from 103.208.86.5;
@@ -31,7 +32,6 @@ set_real_ip_from 104.244.74.97;
 set_real_ip_from 104.244.75.74;
 set_real_ip_from 104.244.77.192;
 set_real_ip_from 104.244.77.208;
-set_real_ip_from 104.244.77.79;
 set_real_ip_from 104.244.77.80;
 set_real_ip_from 104.244.78.162;
 set_real_ip_from 104.244.78.233;
@@ -109,7 +109,6 @@ set_real_ip_from 109.70.100.69;
 set_real_ip_from 109.70.100.70;
 set_real_ip_from 109.70.100.71;
 set_real_ip_from 114.199.75.111;
-set_real_ip_from 118.163.74.160;
 set_real_ip_from 123.253.35.32;
 set_real_ip_from 125.212.241.131;
 set_real_ip_from 128.31.0.13;
@@ -236,6 +235,7 @@ set_real_ip_from 185.100.87.192;
 set_real_ip_from 185.100.87.250;
 set_real_ip_from 185.100.87.253;
 set_real_ip_from 185.100.87.41;
+set_real_ip_from 185.10.16.41;
 set_real_ip_from 185.106.94.195;
 set_real_ip_from 185.107.70.56;
 set_real_ip_from 185.112.146.168;
@@ -803,7 +803,6 @@ set_real_ip_from 2001:67c:89c:702:1ce:1ce:babe:9;
 set_real_ip_from 2001:780:107:b::85;
 set_real_ip_from 2001:910:1400:107::2;
 set_real_ip_from 2001:9b1:c300:3044::610;
-set_real_ip_from 2001:b030:2422::7234;
 set_real_ip_from 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 set_real_ip_from 2001:bc8:1600:472a::1;
 set_real_ip_from 2001:bc8:700:9212::1;
@@ -880,6 +879,7 @@ set_real_ip_from 23.129.64.147;
 set_real_ip_from 23.129.64.148;
 set_real_ip_from 23.129.64.149;
 set_real_ip_from 23.129.64.210;
+set_real_ip_from 23.129.64.211;
 set_real_ip_from 23.129.64.212;
 set_real_ip_from 23.129.64.213;
 set_real_ip_from 23.129.64.214;
@@ -921,6 +921,7 @@ set_real_ip_from 23.154.177.19;
 set_real_ip_from 23.154.177.2;
 set_real_ip_from 23.154.177.20;
 set_real_ip_from 23.154.177.21;
+set_real_ip_from 23.154.177.22;
 set_real_ip_from 23.154.177.23;
 set_real_ip_from 23.154.177.24;
 set_real_ip_from 23.154.177.25;
@@ -932,6 +933,7 @@ set_real_ip_from 23.154.177.7;
 set_real_ip_from 23.154.177.8;
 set_real_ip_from 23.154.177.9;
 set_real_ip_from 23.155.24.6;
+set_real_ip_from 23.155.8.104;
 set_real_ip_from 23.184.48.101;
 set_real_ip_from 23.184.48.127;
 set_real_ip_from 23.184.48.128;
@@ -958,6 +960,7 @@ set_real_ip_from 2600:3c00::f03c:91ff:fe96:1cd9;
 set_real_ip_from 2600:3c03:e000:fa::3;
 set_real_ip_from 2600:3c03::f03c:94ff:fed1:8c69;
 set_real_ip_from 2600:3c07::f03c:94ff:fe12:513e;
+set_real_ip_from 2602:2e5::104;
 set_real_ip_from 2602:2e6:0:6::;
 set_real_ip_from 2602:fbf6:11:27::3;
 set_real_ip_from 2602:fc24:11:26c3::1;
@@ -1097,6 +1100,7 @@ set_real_ip_from 2620:18c:0:192::147;
 set_real_ip_from 2620:18c:0:192::148;
 set_real_ip_from 2620:18c:0:192::149;
 set_real_ip_from 2620:18c:0:192::210;
+set_real_ip_from 2620:18c:0:192::211;
 set_real_ip_from 2620:18c:0:192::212;
 set_real_ip_from 2620:18c:0:192::213;
 set_real_ip_from 2620:18c:0:192::214;
@@ -1531,7 +1535,6 @@ set_real_ip_from 2a12:a800:2:1:45:138:16:203;
 set_real_ip_from 31.129.22.65;
 set_real_ip_from 31.220.87.46;
 set_real_ip_from 31.220.98.139;
-set_real_ip_from 3.212.50.218;
 set_real_ip_from 35.0.127.52;
 set_real_ip_from 37.1.201.144;
 set_real_ip_from 37.120.166.23;
@@ -1546,6 +1549,7 @@ set_real_ip_from 37.48.120.196;
 set_real_ip_from 37.48.70.156;
 set_real_ip_from 38.242.254.131;
 set_real_ip_from 38.97.116.244;
+set_real_ip_from 44.212.207.100;
 set_real_ip_from 45.12.3.80;
 set_real_ip_from 45.128.232.151;
 set_real_ip_from 45.129.199.163;
@@ -1643,6 +1647,7 @@ set_real_ip_from 51.81.254.15;
 set_real_ip_from 5.181.80.107;
 set_real_ip_from 5.182.86.212;
 set_real_ip_from 51.89.153.112;
+set_real_ip_from 51.91.18.151;
 set_real_ip_from 5.196.73.12;
 set_real_ip_from 5.196.8.113;
 set_real_ip_from 5.196.95.34;
@@ -1730,6 +1735,7 @@ set_real_ip_from 80.78.27.108;
 set_real_ip_from 80.82.78.14;
 set_real_ip_from 81.16.33.42;
 set_real_ip_from 81.17.28.95;
+set_real_ip_from 81.64.1.143;
 set_real_ip_from 82.118.242.158;
 set_real_ip_from 82.153.138.120;
 set_real_ip_from 82.153.138.153;
